trunk/Archive2/0d/de4755cd6244bd/output
main.cpp: In function 'int main()':
main.cpp:19:8: error: expected primary-expression before ';' token
     };-;
        ^
